--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
+    "react-router-dom": "^6.8.1",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
