--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -34,8 +35,10 @@
     "husky": "^8.0.0",
     "lint-staged": "^13.1.2",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "taffydb": "^2.7.3",
+    "tailwindcss": "^3.2.6",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   },
