--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
