--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
+    "@supabase/supabase-js": "^2.8.0",
     "@tanstack/match-sorter-utils": "^8.7.6",
     "@tanstack/react-table": "^8.7.9",
     "react": "^18.2.0",
@@ -42,6 +43,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
+    "supabase": "^1.38.2",
     "taffydb": "^2.7.3",
     "tailwindcss": "^3.2.6",
     "typescript": "^4.9.3",
