--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "src"],
+  "include": ["src", "vite.config.ts"],
   "references": [{"path": "./tsconfig.node.json"}]
 }
