--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
-    "@midly/react-dropdown": "^1.0.2",
-    "@midly/react-modal": "^1.0.2",
+    "@midly/react-dropdown": "^1.0.3",
+    "@midly/react-modal": "^1.0.7",
     "@supabase/auth-ui-react": "^0.2.8",
     "@supabase/supabase-js": "^2.8.0",
     "@tanstack/match-sorter-utils": "^8.7.6",
@@ -52,7 +52,8 @@
     "taffydb": "^2.7.3",
     "tailwindcss": "^3.2.6",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-top-level-await": "^1.3.0"
   },
   "lint-staged": {
     "*.{ts, tsx}": [
