--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "taffydb": "^2.7.3",
     "tailwindcss": "^3.2.6",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-top-level-await": "^1.3.0"
   },
   "lint-staged": {
     "*.{ts, tsx}": [
