--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prettier": "^2.8.4",
     "supabase": "^1.38.2",
     "taffydb": "^2.7.3",
+    "tailwind-merge": "^1.10.0",
     "tailwindcss": "^3.2.6",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
