--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.{ts, tsx}\"",
     "prepare": "husky install",
-    "docs": "jsdoc -c jsdoc.json"
+    "docs": "jsdoc -c jsdoc.json",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
@@ -26,10 +28,13 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.1",
+    "remove": "^0.1.5",
     "validator": "^13.9.0",
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "@types/react-datepicker": "^4.8.0",
@@ -38,14 +43,18 @@
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "add": "^2.0.6",
     "autoprefixer": "^10.4.13",
     "better-docs": "^2.7.2",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.10.2",
+    "happy-dom": "^8.9.0",
     "husky": "^8.0.0",
     "jsdoc": "^4.0.2",
     "lint-staged": "^13.1.2",
@@ -58,7 +67,8 @@
     "tailwindcss": "^3.2.6",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
-    "vite-plugin-top-level-await": "^1.3.0"
+    "vite-plugin-top-level-await": "^1.3.0",
+    "vitest": "^0.29.2"
   },
   "lint-staged": {
     "*.{ts, tsx}": [
